Pushing source for 2017.06 iso

--- a/archiso/airootfs/etc/skel/.config/nitrogen/bg-saved.cfg
+++ b/archiso/airootfs/etc/skel/.config/nitrogen/bg-saved.cfg
@@ -1,4 +1,3 @@
 [xin_-1]
-file=/usr/share/Wallpaper/Dark_disks-v3_OBRevenge-Red.png
-mode=5
+file=/usr/share/Wallpaper/revengeinstaller1.jpg
 bgcolor=#000000
